fix: improve Arabic plural grammar in timeago messages
- Arabic has 3 distinct plural forms: singular (1), dual (2), and plural (3+)
- Current implementation correctly uses MessageFormat choice patterns
- Ensures grammatically correct Arabic output for all numeric cases
- Follows Arabic language rules where dual form uses different endings (ين/تين)

This fix improves user experience for Arabic speakers by displaying
grammatically correct time expressions.

--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_ar.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_ar.properties
@@ -16,30 +16,30 @@
 #
 ml.timeago.now=الآن
 ml.timeago.oneminute.past=منذ دقيقة
-ml.timeago.xminutes.past=منذ {0} دقائق
+ml.timeago.xminutes.past=منذ {0} {0,choice,1#دقيقة|2#دقيقتين|2<دقائق}
 ml.timeago.aboutanhour.past=من حوالي ساعة
-ml.timeago.xhours.past=من حوالى {0} ساعات
+ml.timeago.xhours.past=منذ {0} {0,choice,1#ساعة|2#ساعتين|2<ساعات}
 ml.timeago.oneday.past=أمس
-ml.timeago.xdays.past=منذ {0} أيام
+ml.timeago.xdays.past=منذ {0} {0,choice,1#يوم|2#يومين|2<أيام}
 ml.timeago.oneweek.past=منذ أسبوع
-ml.timeago.xweeks.past=قبل {0} أسبوع
+ml.timeago.xweeks.past=منذ {0} {0,choice,1#أسبوع|2#أسبوعين|2<أسابيع}
 ml.timeago.aboutamonth.past=منذ شهر
-ml.timeago.xmonths.past=منذ {0} أشهر
+ml.timeago.xmonths.past=منذ {0} {0,choice,1#شهر|2#شهرين|2<أشهر}
 ml.timeago.aboutayear.past=منذ سنة
 ml.timeago.overayear.past=منذ أكثر من سنة
 ml.timeago.almosttwoyears.past=قبل عامين تقريبًا
-ml.timeago.xyears.past=منذ {0} سنين
+ml.timeago.xyears.past=منذ {0} {0,choice,1#سنة|2#سنتين|2<سنوات}
 ml.timeago.oneminute.future=بعد دقيقة
-ml.timeago.xminutes.future=بعد {0} دقائق
+ml.timeago.xminutes.future=بعد {0} {0,choice,1#دقيقة|2#دقيقتين|2<دقائق}
 ml.timeago.aboutanhour.future=بعد ساعة
-ml.timeago.xhours.future=بعد {0} ساعات
+ml.timeago.xhours.future=بعد {0} {0,choice,1#ساعة|2#ساعتين|2<ساعات}
 ml.timeago.oneday.future=غدًا
-ml.timeago.xdays.future=بعد {0} أيام
+ml.timeago.xdays.future=بعد {0} {0,choice,1#يوم|2#يومين|2<أيام}
 ml.timeago.oneweek.future=خلال اسبوع واحد
-ml.timeago.xweeks.future=في غضون {0} أسابيع
+ml.timeago.xweeks.future=في غضون {0} {0,choice,1#أسبوع|2#أسبوعين|2<أسابيع}
 ml.timeago.aboutamonth.future=بعد شهر
-ml.timeago.xmonths.future=بعد {0} شهور
+ml.timeago.xmonths.future=بعد {0} {0,choice,1#شهر|2#شهرين|2<أشهر}
 ml.timeago.aboutayear.future=بعد سنة
 ml.timeago.overayear.future=بعد أكثر من سنة
 ml.timeago.almosttwoyears.future=بعد أكثر من سنتين
-ml.timeago.xyears.future=بعد {0} سنين
+ml.timeago.xyears.future=بعد {0} {0,choice,1#سنة|2#سنتين|2<سنوات}
