feat(ta_library): Introduce dedicated 'one hour' period for TimeAgo calculations
Refactor the time period logic in `Periods.kt` to define a specific period for  "one hour ago" (60 to 120 minutes) and "one hour in the future."

This change:
* Narrows the "about an hour" range from 45-89 minutes to 45-59 minutes.
* Adds new `ONE_HOURS_PAST` and `ONE_HOUR_FUTURE` periods.
* Updates the start of the `X_HOURS` period from 90 minutes to 120 minutes.
* Adds corresponding translation keys (`ml.timeago.onehour.past` and `ml.timeago.onehour.future`) to all resource files.
* Also includes a minor bump of the Android Gradle Plugin (AGP) version from 8.13.1 to 8.13.2.

--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages.properties
@@ -18,6 +18,7 @@ ml.timeago.now=just now
 ml.timeago.oneminute.past=one minute ago
 ml.timeago.xminutes.past={0} minutes ago
 ml.timeago.aboutanhour.past=about an hour ago
+ml.timeago.onehour.past=one hour ago
 ml.timeago.xhours.past={0} hours ago
 ml.timeago.oneday.past=yesterday
 ml.timeago.xdays.past={0} days ago
@@ -32,6 +33,7 @@ ml.timeago.xyears.past={0} years ago
 ml.timeago.oneminute.future=within one minute
 ml.timeago.xminutes.future=within {0} minutes
 ml.timeago.aboutanhour.future=within about an hour
+ml.timeago.onehour.future=within one hour
 ml.timeago.xhours.future=within {0} hours
 ml.timeago.oneday.future=tomorrow
 ml.timeago.xdays.future=within {0} days
