--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_ar.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_ar.properties
@@ -14,32 +14,34 @@
 # specific language governing permissions and limitations
 # under the License.
 #
-ml.timeago.now=الآن
-ml.timeago.oneminute.past=منذ دقيقة
-ml.timeago.xminutes.past=منذ {0} دقائق
-ml.timeago.aboutanhour.past=من حوالي ساعة
-ml.timeago.xhours.past=من حوالى {0} ساعات
-ml.timeago.oneday.past=أمس
-ml.timeago.xdays.past=منذ {0} أيام
-ml.timeago.oneweek.past=منذ أسبوع
-ml.timeago.xweeks.past=قبل {0} أسبوع
-ml.timeago.aboutamonth.past=منذ شهر
-ml.timeago.xmonths.past=منذ {0} أشهر
-ml.timeago.aboutayear.past=منذ سنة
-ml.timeago.overayear.past=منذ أكثر من سنة
-ml.timeago.almosttwoyears.past=قبل عامين تقريبًا
-ml.timeago.xyears.past=منذ {0} سنين
-ml.timeago.oneminute.future=بعد دقيقة
-ml.timeago.xminutes.future=بعد {0} دقائق
-ml.timeago.aboutanhour.future=بعد ساعة
-ml.timeago.xhours.future=بعد {0} ساعات
-ml.timeago.oneday.future=غدًا
-ml.timeago.xdays.future=بعد {0} أيام
-ml.timeago.oneweek.future=خلال اسبوع واحد
-ml.timeago.xweeks.future=في غضون {0} أسابيع
-ml.timeago.aboutamonth.future=بعد شهر
-ml.timeago.xmonths.future=بعد {0} شهور
-ml.timeago.aboutayear.future=بعد سنة
-ml.timeago.overayear.future=بعد أكثر من سنة
-ml.timeago.almosttwoyears.future=بعد أكثر من سنتين
-ml.timeago.xyears.future=بعد {0} سنين
+ml.timeago.now=????
+ml.timeago.oneminute.past=??? ?????
+ml.timeago.xminutes.past=??? {0} ?????
+ml.timeago.aboutanhour.past=?? ????? ????
+ml.timeago.onehour.past=??? ????
+ml.timeago.xhours.past=?? ????? {0} ?????
+ml.timeago.oneday.past=???
+ml.timeago.xdays.past=??? {0} ????
+ml.timeago.oneweek.past=??? ?????
+ml.timeago.xweeks.past=??? {0} ?????
+ml.timeago.aboutamonth.past=??? ???
+ml.timeago.xmonths.past=??? {0} ????
+ml.timeago.aboutayear.past=??? ???
+ml.timeago.overayear.past=??? ???? ?? ???
+ml.timeago.almosttwoyears.past=??? ????? ???????
+ml.timeago.xyears.past=??? {0} ????
+ml.timeago.oneminute.future=??? ?????
+ml.timeago.xminutes.future=??? {0} ?????
+ml.timeago.aboutanhour.future=??? ????
+ml.timeago.onehour.future=?? ???? ????
+ml.timeago.xhours.future=??? {0} ?????
+ml.timeago.oneday.future=????
+ml.timeago.xdays.future=??? {0} ????
+ml.timeago.oneweek.future=???? ????? ????
+ml.timeago.xweeks.future=?? ???? {0} ??????
+ml.timeago.aboutamonth.future=??? ???
+ml.timeago.xmonths.future=??? {0} ????
+ml.timeago.aboutayear.future=??? ???
+ml.timeago.overayear.future=??? ???? ?? ???
+ml.timeago.almosttwoyears.future=??? ???? ?? ?????
+ml.timeago.xyears.future=??? {0} ????
