--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_es.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_es.properties
@@ -18,28 +18,30 @@ ml.timeago.now=justo ahora
 ml.timeago.oneminute.past=hace un minuto
 ml.timeago.xminutes.past=hace {0} minutos
 ml.timeago.aboutanhour.past=hace aprox. una hora
+ml.timeago.onehour.past=hace una hora
 ml.timeago.xhours.past=hace {0} horas
 ml.timeago.oneday.past=ayer
-ml.timeago.xdays.past=hace {0} d\u00EDas
+ml.timeago.xdays.past=hace {0} días
 ml.timeago.oneweek.past=hace una semana
-ml.timeago.xweeks.past={0} semanas atrÃ¡s
-ml.timeago.aboutamonth.past=hace m\u00E1s o menos un mes
+ml.timeago.xweeks.past={0} semanas atrás
+ml.timeago.aboutamonth.past=hace más o menos un mes
 ml.timeago.xmonths.past=hace {0} meses
-ml.timeago.aboutayear.past=hace un a\u00F1o
-ml.timeago.overayear.past=hace m\u00E1s de un a\u00F1o
-ml.timeago.almosttwoyears.past=hace casi dos a\u00F1os
-ml.timeago.xyears.past=hace {0} a\u00F1os
+ml.timeago.aboutayear.past=hace un año
+ml.timeago.overayear.past=hace más de un año
+ml.timeago.almosttwoyears.past=hace casi dos años
+ml.timeago.xyears.past=hace {0} años
 ml.timeago.oneminute.future=dentro de un minuto
 ml.timeago.xminutes.future=dentro de {0} minutos
-ml.timeago.aboutanhour.future=dentro de una hora
+ml.timeago.aboutanhour.future=dentro de aprox. una hora
+ml.timeago.onehour.future=dentro de una hora
 ml.timeago.xhours.future=dentro de {0} horas
-ml.timeago.oneday.future=ma\u00F1ana
-ml.timeago.xdays.future=dentro de {0} d\u00EDas
+ml.timeago.oneday.future=mañana
+ml.timeago.xdays.future=dentro de {0} días
 ml.timeago.oneweek.future=dentro de una semana
 ml.timeago.xweeks.future=dentro de {0} semanas
 ml.timeago.aboutamonth.future=dentro de un mes
 ml.timeago.xmonths.future=dentro de {0} meses
-ml.timeago.aboutayear.future=dentro de un a\u00F1o
-ml.timeago.overayear.future=dentro de un a\u00F1o
-ml.timeago.almosttwoyears.future=dentro de casi dos a\u00F1os
-ml.timeago.xyears.future=dentro de {0} a\u00F1os
+ml.timeago.aboutayear.future=dentro de un año
+ml.timeago.overayear.future=dentro de un año
+ml.timeago.almosttwoyears.future=dentro de casi dos años
+ml.timeago.xyears.future=dentro de {0} años
