--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_eu.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_eu.properties
@@ -18,6 +18,7 @@ ml.timeago.now=oraintxe bertan
 ml.timeago.oneminute.past=orain dela minutu bat
 ml.timeago.xminutes.past=orain dela {0} minutu
 ml.timeago.aboutanhour.past=orain dela ordu bat
+ml.timeago.onehour.past=orain dela ordu bat
 ml.timeago.xhours.past=orain dela {0} ordu
 ml.timeago.oneday.past=atzo
 ml.timeago.xdays.past=orain dela {0} egun
@@ -32,6 +33,7 @@ ml.timeago.xyears.past=orain dela {0} urte
 ml.timeago.oneminute.future=minutu bat barru
 ml.timeago.xminutes.future={0} minutu barru
 ml.timeago.aboutanhour.future=ordun bat barru
+ml.timeago.onehour.future=ordu bat barru
 ml.timeago.xhours.future={0} ordu barru
 ml.timeago.oneday.future=bihar
 ml.timeago.xdays.future={0} egun barru
