--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fa.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fa.properties
@@ -14,32 +14,34 @@
 # specific language governing permissions and limitations
 # under the License.
 #
-ml.timeago.now=همین الان
-ml.timeago.oneminute.past=یک دقیقه پیش
-ml.timeago.xminutes.past={0} دقیقه پیش
-ml.timeago.aboutanhour.past=حدود یک ساعت پیش
-ml.timeago.xhours.past={0} ساعت پیش
-ml.timeago.oneday.past=دیروز
-ml.timeago.xdays.past={0} روز پیش
-ml.timeago.oneweek.past=یک هفته پیش
-ml.timeago.xweeks.past={0} هفته قبل
-ml.timeago.aboutamonth.past=حدود یک ماه پیش
-ml.timeago.xmonths.past={0} ماه پیش
-ml.timeago.aboutayear.past=حدود یک سال پیش
-ml.timeago.overayear.past=بیش از یک سال پیش
-ml.timeago.almosttwoyears.past=حدود دو سال پیش
-ml.timeago.xyears.past={0} سال پیش
-ml.timeago.oneminute.future=یک دقیقه دیگر
-ml.timeago.xminutes.future=حدود {0} دقیقه دیگر
-ml.timeago.aboutanhour.future=حدود یک ساعت دیگر
-ml.timeago.xhours.future=حدود {0} ساعت دیگر
-ml.timeago.oneday.future=فردا
-ml.timeago.xdays.future=حدود {0} روز دیگر
-ml.timeago.oneweek.future=در طول یک هفته
-ml.timeago.xweeks.future=طی {0} هفته
-ml.timeago.aboutamonth.future=حدود یک ماه دیگر
-ml.timeago.xmonths.future=حدود {0} ماه دیگر
-ml.timeago.aboutayear.future=حدود یک سال دیگر
-ml.timeago.overayear.future=بیش از سال دیگر
-ml.timeago.almosttwoyears.future=حدود دو سال دیگر
-ml.timeago.xyears.future=حدود {0} سال دیگر
+ml.timeago.now=???? ????
+ml.timeago.oneminute.past=?? ????? ???
+ml.timeago.xminutes.past={0} ????? ???
+ml.timeago.aboutanhour.past=???? ?? ???? ???
+ml.timeago.onehour.past=?? ???? ???
+ml.timeago.xhours.past={0} ???? ???
+ml.timeago.oneday.past=?????
+ml.timeago.xdays.past={0} ??? ???
+ml.timeago.oneweek.past=?? ???? ???
+ml.timeago.xweeks.past={0} ???? ???
+ml.timeago.aboutamonth.past=???? ?? ??? ???
+ml.timeago.xmonths.past={0} ??? ???
+ml.timeago.aboutayear.past=???? ?? ??? ???
+ml.timeago.overayear.past=??? ?? ?? ??? ???
+ml.timeago.almosttwoyears.past=???? ?? ??? ???
+ml.timeago.xyears.past={0} ??? ???
+ml.timeago.oneminute.future=?? ????? ????
+ml.timeago.xminutes.future=???? {0} ????? ????
+ml.timeago.aboutanhour.future=???? ?? ???? ????
+ml.timeago.onehour.future=?? ??? ?? ????
+ml.timeago.xhours.future=???? {0} ???? ????
+ml.timeago.oneday.future=????
+ml.timeago.xdays.future=???? {0} ??? ????
+ml.timeago.oneweek.future=?? ??? ?? ????
+ml.timeago.xweeks.future=?? {0} ????
+ml.timeago.aboutamonth.future=???? ?? ??? ????
+ml.timeago.xmonths.future=???? {0} ??? ????
+ml.timeago.aboutayear.future=???? ?? ??? ????
+ml.timeago.overayear.future=??? ?? ??? ????
+ml.timeago.almosttwoyears.future=???? ?? ??? ????
+ml.timeago.xyears.future=???? {0} ??? ????
