--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fil.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fil.properties
@@ -18,6 +18,7 @@ ml.timeago.now=ngayon lang
 ml.timeago.oneminute.past=isang minuto ang nakalipas
 ml.timeago.xminutes.past={0} minuto ang nakalipas
 ml.timeago.aboutanhour.past=halos isang oras na ang nakalipas
+ml.timeago.onehour.past=isang oras ang nakalipas
 ml.timeago.xhours.past={0} na oras ang nakalipas
 ml.timeago.oneday.past=kahapon
 ml.timeago.xdays.past={0} araw ang nakalipas
@@ -32,6 +33,7 @@ ml.timeago.xyears.past={0} taon na ang nakalipas
 ml.timeago.oneminute.future=sa loob ng isang minuto
 ml.timeago.xminutes.future=sa loob ng {0} minuto
 ml.timeago.aboutanhour.future=sa loob ng halos isang oras
+ml.timeago.onehour.future=sa loob ng isang oras
 ml.timeago.xhours.future=sa loob ng {0} oras
 ml.timeago.oneday.future=bukas
 ml.timeago.xdays.future=sa loob ng {0} araw
