--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_hi.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_hi.properties
@@ -14,32 +14,34 @@
 # specific language governing permissions and limitations
 # under the License.
 #
-ml.timeago.now=अभी
-ml.timeago.oneminute.past=एक मिनट पहले
-ml.timeago.xminutes.past={0} मिनट पहले
-ml.timeago.aboutanhour.past=करीब एक घंटे पहले
-ml.timeago.xhours.past={0} घंटे पहले
-ml.timeago.oneday.past=कल
-ml.timeago.xdays.past={0} दिन पहले
-ml.timeago.oneweek.past=एक हफ्ते पहले
-ml.timeago.xweeks.past={0} सप्ताह पहले
-ml.timeago.aboutamonth.past=करीब 1 महीने पहले
-ml.timeago.xmonths.past={0} महीने पहले
-ml.timeago.aboutayear.past=लगभग एक साल पहले
-ml.timeago.overayear.past=एक वर्ष पहले
-ml.timeago.almosttwoyears.past=लगभग दो साल पहले
-ml.timeago.xyears.past={0} साल पहले
-ml.timeago.oneminute.future=एक मिनट के भीतर
-ml.timeago.xminutes.future={0} मिनट के भीतर
-ml.timeago.aboutanhour.future=लगभग एक घंटे के भीतर
-ml.timeago.xhours.future={0} घंटे के भीतर
-ml.timeago.oneday.future=आने वाला कल
-ml.timeago.xdays.future={0} दिनों के भीतर
-ml.timeago.oneweek.future=एक सप्ताह में
-ml.timeago.xweeks.future={0} सप्ताह के भीतर
-ml.timeago.aboutamonth.future=लगभग एक महीने के भीतर
-ml.timeago.xmonths.future={0} महीने के भीतर
-ml.timeago.aboutayear.future=लगभग एक साल के भीतर
-ml.timeago.overayear.future=एक साल के भीतर
-ml.timeago.almosttwoyears.future=लगभग दो साल के भीतर
-ml.timeago.xyears.future={0} साल के भीतर
+ml.timeago.now=???
+ml.timeago.oneminute.past=?? ???? ????
+ml.timeago.xminutes.past={0} ???? ????
+ml.timeago.aboutanhour.past=???? ?? ???? ????
+ml.timeago.onehour.past=?? ???? ????
+ml.timeago.xhours.past={0} ???? ????
+ml.timeago.oneday.past=??
+ml.timeago.xdays.past={0} ??? ????
+ml.timeago.oneweek.past=?? ????? ????
+ml.timeago.xweeks.past={0} ?????? ????
+ml.timeago.aboutamonth.past=???? 1 ????? ????
+ml.timeago.xmonths.past={0} ????? ????
+ml.timeago.aboutayear.past=???? ?? ??? ????
+ml.timeago.overayear.past=?? ???? ????
+ml.timeago.almosttwoyears.past=???? ?? ??? ????
+ml.timeago.xyears.past={0} ??? ????
+ml.timeago.oneminute.future=?? ???? ?? ????
+ml.timeago.xminutes.future={0} ???? ?? ????
+ml.timeago.aboutanhour.future=???? ?? ???? ?? ????
+ml.timeago.onehour.future=?? ???? ?? ????
+ml.timeago.xhours.future={0} ???? ?? ????
+ml.timeago.oneday.future=??? ???? ??
+ml.timeago.xdays.future={0} ????? ?? ????
+ml.timeago.oneweek.future=?? ?????? ???
+ml.timeago.xweeks.future={0} ?????? ?? ????
+ml.timeago.aboutamonth.future=???? ?? ????? ?? ????
+ml.timeago.xmonths.future={0} ????? ?? ????
+ml.timeago.aboutayear.future=???? ?? ??? ?? ????
+ml.timeago.overayear.future=?? ??? ?? ????
+ml.timeago.almosttwoyears.future=???? ?? ??? ?? ????
+ml.timeago.xyears.future={0} ??? ?? ????
