--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_hu.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_hu.properties
@@ -18,6 +18,7 @@ ml.timeago.now=épp most
 ml.timeago.oneminute.past=egy perce
 ml.timeago.xminutes.past={0} perce
 ml.timeago.aboutanhour.past=kb. egy órája
+ml.timeago.onehour.past=egy órája
 ml.timeago.xhours.past={0} órája
 ml.timeago.oneday.past=tegnap
 ml.timeago.xdays.past={0} napja
@@ -32,6 +33,7 @@ ml.timeago.xyears.past={0} éve
 ml.timeago.oneminute.future=egy perc múlva
 ml.timeago.xminutes.future={0} perc múlva
 ml.timeago.aboutanhour.future=kb. egy óra múlva
+ml.timeago.onehour.future=egy óra múlva
 ml.timeago.xhours.future=kb. {0} óra múlva
 ml.timeago.oneday.future=holnap
 ml.timeago.xdays.future={0} nap múlva
