--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_in.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_in.properties
@@ -2,6 +2,7 @@ ml.timeago.now=baru saja
 ml.timeago.oneminute.past=satu menit yang lalu
 ml.timeago.xminutes.past={0} menit yang lalu
 ml.timeago.aboutanhour.past=satu jam yang lalu
+ml.timeago.onehour.past=satu jam yang lalu
 ml.timeago.xhours.past={0} jam yang lalu
 ml.timeago.oneday.past=kemarin
 ml.timeago.xdays.past={0} hari yang lalu
@@ -16,6 +17,7 @@ ml.timeago.xyears.past={0} tahun yang lalu
 ml.timeago.oneminute.future=satu menit
 ml.timeago.xminutes.future={0} menit
 ml.timeago.aboutanhour.future=satu jam
+ml.timeago.onehour.future=dalam satu jam
 ml.timeago.xhours.future={0} jam
 ml.timeago.oneday.future=besok
 ml.timeago.xdays.future={0} hari
