--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_ja.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_ja.properties
@@ -14,32 +14,34 @@
 # specific language governing permissions and limitations
 # under the License.
 #
-ml.timeago.now=今
-ml.timeago.oneminute.past=1秒前
-ml.timeago.xminutes.past={0}秒前
-ml.timeago.aboutanhour.past=約1時間前
-ml.timeago.xhours.past={0}時間前
-ml.timeago.oneday.past=昨日
-ml.timeago.xdays.past={0}日前
-ml.timeago.oneweek.past=1週間前
-ml.timeago.xweeks.past={0}週間前
-ml.timeago.aboutamonth.past=約1ヶ月前
-ml.timeago.xmonths.past={0}ヶ月前
-ml.timeago.aboutayear.past=約1年前
-ml.timeago.overayear.past=1年以上前
-ml.timeago.almosttwoyears.past=約2年前
-ml.timeago.xyears.past={0}年前
-ml.timeago.oneminute.future=1分後
-ml.timeago.xminutes.future={0}分後
-ml.timeago.aboutanhour.future=1時間後
-ml.timeago.xhours.future={0}時間後
-ml.timeago.oneday.future=明日
-ml.timeago.xdays.future={0}日後
-ml.timeago.oneweek.future=1週間後
-ml.timeago.xweeks.future={0}週間後
-ml.timeago.aboutamonth.future=約1ヶ月後
-ml.timeago.xmonths.future={0}ヶ月後
-ml.timeago.aboutayear.future=約1年後
-ml.timeago.overayear.future=1年以上後
-ml.timeago.almosttwoyears.future=後2年後
-ml.timeago.xyears.future={0}年後
+ml.timeago.now=?
+ml.timeago.oneminute.past=1??
+ml.timeago.xminutes.past={0}??
+ml.timeago.aboutanhour.past=?1???
+ml.timeago.onehour.past=1???
+ml.timeago.xhours.past={0}???
+ml.timeago.oneday.past=??
+ml.timeago.xdays.past={0}??
+ml.timeago.oneweek.past=1???
+ml.timeago.xweeks.past={0}???
+ml.timeago.aboutamonth.past=?1???
+ml.timeago.xmonths.past={0}???
+ml.timeago.aboutayear.past=?1??
+ml.timeago.overayear.past=1????
+ml.timeago.almosttwoyears.past=?2??
+ml.timeago.xyears.past={0}??
+ml.timeago.oneminute.future=1??
+ml.timeago.xminutes.future={0}??
+ml.timeago.aboutanhour.future=?1???
+ml.timeago.onehour.future=1????
+ml.timeago.xhours.future={0}???
+ml.timeago.oneday.future=??
+ml.timeago.xdays.future={0}??
+ml.timeago.oneweek.future=1???
+ml.timeago.xweeks.future={0}???
+ml.timeago.aboutamonth.future=?1???
+ml.timeago.xmonths.future={0}???
+ml.timeago.aboutayear.future=?1??
+ml.timeago.overayear.future=1????
+ml.timeago.almosttwoyears.future=?2??
+ml.timeago.xyears.future={0}??
