--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_nl.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_nl.properties
@@ -19,6 +19,7 @@ ml.timeago.now=nu
 ml.timeago.oneminute.past=1 minuut geleden
 ml.timeago.xminutes.past={0} minuten geleden
 ml.timeago.aboutanhour.past=een uur geleden
+ml.timeago.onehour.past=een uur geleden
 ml.timeago.xhours.past={0} uur geleden
 ml.timeago.oneday.past=gisteren
 ml.timeago.xdays.past={0} dagen geleden
@@ -30,9 +31,10 @@ ml.timeago.aboutayear.past=een jaar geleden
 ml.timeago.overayear.past=meer dan een jaar geleden
 ml.timeago.almosttwoyears.past=twee jaar geleden
 ml.timeago.xyears.past={0} jaar geleden
-ml.timeago.oneminute.future=binnen Ã©Ã©n minuut
+ml.timeago.oneminute.future=binnen één minuut
 ml.timeago.xminutes.future=binnen {0} minuten
 ml.timeago.aboutanhour.future=binnen een uur
+ml.timeago.onehour.future=binnen een uur
 ml.timeago.xhours.future=binnen {0} uur
 ml.timeago.oneday.future=morgen
 ml.timeago.xdays.future=binnen {0} dagen
