--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_tr.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_tr.properties
@@ -14,32 +14,34 @@
 # specific language governing permissions and limitations
 # under the License.
 #
-ml.timeago.now=ÅŸimdi
-ml.timeago.oneminute.past=bir dakika Ã¶nce
-ml.timeago.xminutes.past={0} dakika Ã¶nce
-ml.timeago.aboutanhour.past=yaklaÅŸÄ±k bir saat Ã¶nce
-ml.timeago.xhours.past={0} saat Ã¶nce
-ml.timeago.oneday.past=dÃ¼n
-ml.timeago.xdays.past={0} gÃ¼n Ã¶nce
-ml.timeago.oneweek.past=bir hafta Ã¶nce
-ml.timeago.xweeks.past={0} hafta Ã¶nce
-ml.timeago.aboutamonth.past=yaklaÅŸÄ±k bir ay Ã¶nce
-ml.timeago.xmonths.past={0} ay Ã¶nce
-ml.timeago.aboutayear.past=yaklaÅŸÄ±k bir yÄ±l Ã¶nce
-ml.timeago.overayear.past=bir yÄ±l Ã¶nce
-ml.timeago.almosttwoyears.past=neredeyse iki yÄ±l Ã¶nce
-ml.timeago.xyears.past={0} yÄ±l Ã¶nce
-ml.timeago.oneminute.future=bir dakika iÃ§inde
-ml.timeago.xminutes.future={0} dakika iÃ§inde
-ml.timeago.aboutanhour.future=yaklaÅŸÄ±k bir saat iÃ§inde
-ml.timeago.xhours.future={0} saat iÃ§inde
-ml.timeago.oneday.future=yarÄ±n
-ml.timeago.xdays.future={0} gÃ¼n iÃ§inde
-ml.timeago.oneweek.future=bir hafta iÃ§inde
-ml.timeago.xweeks.future={0} hafta iÃ§inde
-ml.timeago.aboutamonth.future=yaklaÅŸÄ±k bir ay iÃ§inde
-ml.timeago.xmonths.future={0} ay iÃ§inde
-ml.timeago.aboutayear.future=yaklaÅŸÄ±k bir yÄ±l iÃ§inde
-ml.timeago.overayear.future=bir yÄ±l iÃ§inde
-ml.timeago.almosttwoyears.future=neredeyse iki yÄ±l iÃ§inde
-ml.timeago.xyears.future={0} yÄ±l iÃ§inde
+ml.timeago.now=?imdi
+ml.timeago.oneminute.past=bir dakika önce
+ml.timeago.xminutes.past={0} dakika önce
+ml.timeago.aboutanhour.past=yakla??k bir saat önce
+ml.timeago.onehour.past=bir saat önce
+ml.timeago.xhours.past={0} saat önce
+ml.timeago.oneday.past=dün
+ml.timeago.xdays.past={0} gün önce
+ml.timeago.oneweek.past=bir hafta önce
+ml.timeago.xweeks.past={0} hafta önce
+ml.timeago.aboutamonth.past=yakla??k bir ay önce
+ml.timeago.xmonths.past={0} ay önce
+ml.timeago.aboutayear.past=yakla??k bir y?l önce
+ml.timeago.overayear.past=bir y?l önce
+ml.timeago.almosttwoyears.past=neredeyse iki y?l önce
+ml.timeago.xyears.past={0} y?l önce
+ml.timeago.oneminute.future=bir dakika içinde
+ml.timeago.xminutes.future={0} dakika içinde
+ml.timeago.aboutanhour.future=yakla??k bir saat içinde
+ml.timeago.onehour.future=bir saat içinde
+ml.timeago.xhours.future={0} saat içinde
+ml.timeago.oneday.future=yar?n
+ml.timeago.xdays.future={0} gün içinde
+ml.timeago.oneweek.future=bir hafta içinde
+ml.timeago.xweeks.future={0} hafta içinde
+ml.timeago.aboutamonth.future=yakla??k bir ay içinde
+ml.timeago.xmonths.future={0} ay içinde
+ml.timeago.aboutayear.future=yakla??k bir y?l içinde
+ml.timeago.overayear.future=bir y?l içinde
+ml.timeago.almosttwoyears.future=neredeyse iki y?l içinde
+ml.timeago.xyears.future={0} y?l içinde
