--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_zh_TW.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_zh_TW.properties
@@ -14,32 +14,34 @@
 # specific language governing permissions and limitations
 # under the License.
 #
-ml.timeago.now=現在
-ml.timeago.oneminute.past=一分鐘前
-ml.timeago.xminutes.past={0}分鐘前
-ml.timeago.aboutanhour.past=大約一個小時前
-ml.timeago.xhours.past={0}小時前
-ml.timeago.oneday.past=昨天
-ml.timeago.xdays.past={0}天前
-ml.timeago.oneweek.past=一周以前
-ml.timeago.xweeks.past={0}週前
-ml.timeago.aboutamonth.past=大約一個月前
-ml.timeago.xmonths.past={0}個月前
-ml.timeago.aboutayear.past=大約一年前
-ml.timeago.overayear.past=一年多以前
-ml.timeago.almosttwoyears.past=差不多兩年前
-ml.timeago.xyears.past={0}年以前
-ml.timeago.oneminute.future=在一分鐘內
-ml.timeago.xminutes.future=在{0}分鐘內
-ml.timeago.aboutanhour.future=大約一個小時內
-ml.timeago.xhours.future=在{0}小時內
-ml.timeago.oneday.future=明天
-ml.timeago.xdays.future=在{0}天內
-ml.timeago.oneweek.future=一星期內
-ml.timeago.xweeks.future=在{0}週內
-ml.timeago.aboutamonth.future=大約一個月內
-ml.timeago.xmonths.future=在{0}個月內
-ml.timeago.aboutayear.future=大約一年內
-ml.timeago.overayear.future=一年以內
-ml.timeago.almosttwoyears.future=在近兩年內
-ml.timeago.xyears.future=在{0}年內
+ml.timeago.now=??
+ml.timeago.oneminute.past=????
+ml.timeago.xminutes.past={0}???
+ml.timeago.aboutanhour.past=???????
+ml.timeago.onehour.past=????
+ml.timeago.xhours.past={0}???
+ml.timeago.oneday.past=??
+ml.timeago.xdays.past={0}??
+ml.timeago.oneweek.past=????
+ml.timeago.xweeks.past={0}??
+ml.timeago.aboutamonth.past=??????
+ml.timeago.xmonths.past={0}???
+ml.timeago.aboutayear.past=?????
+ml.timeago.overayear.past=?????
+ml.timeago.almosttwoyears.past=??????
+ml.timeago.xyears.past={0}???
+ml.timeago.oneminute.future=?????
+ml.timeago.xminutes.future=?{0}???
+ml.timeago.aboutanhour.future=???????
+ml.timeago.onehour.future=????
+ml.timeago.xhours.future=?{0}???
+ml.timeago.oneday.future=??
+ml.timeago.xdays.future=?{0}??
+ml.timeago.oneweek.future=????
+ml.timeago.xweeks.future=?{0}??
+ml.timeago.aboutamonth.future=??????
+ml.timeago.xmonths.future=?{0}???
+ml.timeago.aboutayear.future=?????
+ml.timeago.overayear.future=????
+ml.timeago.almosttwoyears.future=?????
+ml.timeago.xyears.future=?{0}??
