--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_da.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_da.properties
@@ -18,28 +18,30 @@ ml.timeago.now=lige nu
 ml.timeago.oneminute.past=et minut siden
 ml.timeago.xminutes.past={0} minutter siden
 ml.timeago.aboutanhour.past=omkring en time siden
+ml.timeago.onehour.past=en time siden
 ml.timeago.xhours.past={0} timer siden
-ml.timeago.oneday.past=i gÃ¥r
+ml.timeago.oneday.past=i går
 ml.timeago.xdays.past={0} dage siden
 ml.timeago.oneweek.past=en uge siden
 ml.timeago.xweeks.past={0} uger siden
-ml.timeago.aboutamonth.past=omkring en mÃ¥ned siden
-ml.timeago.xmonths.past={0} mÃ¥neder siden
-ml.timeago.aboutayear.past=omkring et Ã¥r siden
-ml.timeago.overayear.past=over et Ã¥r siden
-ml.timeago.almosttwoyears.past=nÃ¦sten to Ã¥r siden
-ml.timeago.xyears.past={0} Ã¥r siden
+ml.timeago.aboutamonth.past=omkring en måned siden
+ml.timeago.xmonths.past={0} måneder siden
+ml.timeago.aboutayear.past=omkring et år siden
+ml.timeago.overayear.past=over et år siden
+ml.timeago.almosttwoyears.past=næsten to år siden
+ml.timeago.xyears.past={0} år siden
 ml.timeago.oneminute.future=indenfor et minut
 ml.timeago.xminutes.future=indenfor {0} minutter
 ml.timeago.aboutanhour.future=indenfor omkring en time
+ml.timeago.onehour.future=inden for en time
 ml.timeago.xhours.future=indenfor {0} timer
 ml.timeago.oneday.future=i morgen
 ml.timeago.xdays.future=indenfor {0} dage
 ml.timeago.oneweek.future=inden for en uge
 ml.timeago.xweeks.future=inden for {0} uger
-ml.timeago.aboutamonth.future=indenfor omkring en mÃ¥ned
-ml.timeago.xmonths.future=indenfor {0} mÃ¥neder
-ml.timeago.aboutayear.future=indenfor omkring et Ã¥r
-ml.timeago.overayear.future=indenfor over et Ã¥r
-ml.timeago.almosttwoyears.future=indenfor nÃ¦sten to Ã¥r
-ml.timeago.xyears.future=indenfor {0} Ã¥r
+ml.timeago.aboutamonth.future=indenfor omkring en måned
+ml.timeago.xmonths.future=indenfor {0} måneder
+ml.timeago.aboutayear.future=indenfor omkring et år
+ml.timeago.overayear.future=indenfor over et år
+ml.timeago.almosttwoyears.future=indenfor næsten to år
+ml.timeago.xyears.future=indenfor {0} år
