--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_de.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_de.properties
@@ -17,21 +17,23 @@
 ml.timeago.now=gerade jetzt
 ml.timeago.oneminute.past=vor einer Minute
 ml.timeago.xminutes.past=vor {0} Minuten
-ml.timeago.aboutanhour.past=vor ungef\u00E4hr einer Stunde
+ml.timeago.aboutanhour.past=vor ungefähr einer Stunde
+ml.timeago.onehour.past=vor einer Stunde
 ml.timeago.xhours.past=vor {0} Stunden
 ml.timeago.oneday.past=gestern
 ml.timeago.xdays.past=vor {0} Tagen
 ml.timeago.oneweek.past=vor einer Woche
 ml.timeago.xweeks.past=vor {0} Wochen
-ml.timeago.aboutamonth.past=vor ungef\u00E4hr einem Monat
+ml.timeago.aboutamonth.past=vor ungefähr einem Monat
 ml.timeago.xmonths.past=vor {0} Monaten
 ml.timeago.aboutayear.past=vor etwa einem Jahr
-ml.timeago.overayear.past=vor \u00FCber einem Jahr
+ml.timeago.overayear.past=vor über einem Jahr
 ml.timeago.almosttwoyears.past=vor fast zwei Jahren
 ml.timeago.xyears.past=vor {0} Jahren
 ml.timeago.oneminute.future=innerhalb einer Minute
 ml.timeago.xminutes.future=innerhalb {0} Minuten
 ml.timeago.aboutanhour.future=innerhalb von etwa einer Stunde
+ml.timeago.onehour.future=innerhalb einer Stunde
 ml.timeago.xhours.future=innerhalb {0} Stunden
 ml.timeago.oneday.future=morgen
 ml.timeago.xdays.future=innerhalb {0} Tagen
