--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_en.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_en.properties
@@ -18,6 +18,7 @@ ml.timeago.now=just now
 ml.timeago.oneminute.past=one minute ago
 ml.timeago.xminutes.past={0} minutes ago
 ml.timeago.aboutanhour.past=about an hour ago
+ml.timeago.onehour.past=one hour ago
 ml.timeago.xhours.past={0} hours ago
 ml.timeago.oneday.past=yesterday
 ml.timeago.xdays.past={0} days ago
@@ -32,6 +33,7 @@ ml.timeago.xyears.past={0} years ago
 ml.timeago.oneminute.future=within one minute
 ml.timeago.xminutes.future=within {0} minutes
 ml.timeago.aboutanhour.future=within about an hour
+ml.timeago.onehour.future=within one hour
 ml.timeago.xhours.future=within {0} hours
 ml.timeago.oneday.future=tomorrow
 ml.timeago.xdays.future=within {0} days
