--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_it.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_it.properties
@@ -18,6 +18,7 @@ ml.timeago.now=proprio adesso
 ml.timeago.oneminute.past=uno giorno fa
 ml.timeago.xminutes.past={0} minuti fa
 ml.timeago.aboutanhour.past=circa un'ora fa
+ml.timeago.onehour.past=un'ora fa
 ml.timeago.xhours.past={0} ore fa
 ml.timeago.oneday.past=ieri
 ml.timeago.xdays.past={0} giorni fa
@@ -26,12 +27,13 @@ ml.timeago.xweeks.past={0} settimane fa
 ml.timeago.aboutamonth.past=circa un mese fa
 ml.timeago.xmonths.past={0} mesi fa
 ml.timeago.aboutayear.past=circa un anno fa
-ml.timeago.overayear.past=pi\u00F9 di un anno fa
+ml.timeago.overayear.past=più di un anno fa
 ml.timeago.almosttwoyears.past=quasi due anni fa
 ml.timeago.xyears.past={0} anni fa
 ml.timeago.oneminute.future=entro un minuto
 ml.timeago.xminutes.future=entro {0} minuti
 ml.timeago.aboutanhour.future=a circa un'ora
+ml.timeago.onehour.future=entro un'ora
 ml.timeago.xhours.future=entro {0} ore
 ml.timeago.oneday.future=domani
 ml.timeago.xdays.future=entro {0} giorni
