--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_pt.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_pt.properties
@@ -15,29 +15,31 @@
 # under the License.
 #
 ml.timeago.now=agora
-ml.timeago.oneminute.past=um minuto atr\u00E1s
-ml.timeago.xminutes.past={0} minutos atr\u00E1s
-ml.timeago.aboutanhour.past=cerca de uma hora atr\u00E1s
-ml.timeago.xhours.past={0} horas atr\u00E1s
+ml.timeago.oneminute.past=um minuto atrás
+ml.timeago.xminutes.past={0} minutos atrás
+ml.timeago.aboutanhour.past=cerca de uma hora atrás
+ml.timeago.onehour.past=uma hora atrás
+ml.timeago.xhours.past={0} horas atrás
 ml.timeago.oneday.past=ontem
-ml.timeago.xdays.past={0} dias atr\u00E1s
+ml.timeago.xdays.past={0} dias atrás
 ml.timeago.oneweek.past=faz uma semana
-ml.timeago.xweeks.past={0} semanas atrÃ¡s
-ml.timeago.aboutamonth.past=cerca de um m\u00EAs atr\u00E1s
-ml.timeago.xmonths.past={0} meses atr\u00E1s
-ml.timeago.aboutayear.past=cerca de um ano atr\u00E1s
-ml.timeago.overayear.past=mais de um ano atr\u00E1s
-ml.timeago.almosttwoyears.past=h\u00E1 quase dois anos
-ml.timeago.xyears.past={0} anos atr\u00E1s
+ml.timeago.xweeks.past={0} semanas atrás
+ml.timeago.aboutamonth.past=cerca de um mês atrás
+ml.timeago.xmonths.past={0} meses atrás
+ml.timeago.aboutayear.past=cerca de um ano atrás
+ml.timeago.overayear.past=mais de um ano atrás
+ml.timeago.almosttwoyears.past=há quase dois anos
+ml.timeago.xyears.past={0} anos atrás
 ml.timeago.oneminute.future=dentro de um minuto
 ml.timeago.xminutes.future=dentro de {0} minutos
 ml.timeago.aboutanhour.future=dentro de uma hora
+ml.timeago.onehour.future=dentro de uma hora
 ml.timeago.xhours.future=dentro de {0} horas
-ml.timeago.oneday.future=amanh\u00E3
+ml.timeago.oneday.future=amanhã
 ml.timeago.xdays.future=dentro de {0} dias
 ml.timeago.oneweek.future=dentro de uma semana
 ml.timeago.xweeks.future=dentro de {0} semanas
-ml.timeago.aboutamonth.future=dentro de um m\u00EAs
+ml.timeago.aboutamonth.future=dentro de um mês
 ml.timeago.xmonths.future=dentro de {0} meses
 ml.timeago.aboutayear.future=dentro de um ano
 ml.timeago.overayear.future=dentro de um ano
